--- a/src/app/leaderrosta/leaderrosta.component.html
+++ b/src/app/leaderrosta/leaderrosta.component.html
@@ -12,11 +12,11 @@
           <ons-icon style="color: 7413dc;" icon="fa-calendar-day" *ngIf="!date_list"></ons-icon>
           <ons-icon style="color: 7413dc;" icon="fa-user-ninja" *ngIf="date_list"></ons-icon>
         </ons-toolbar-button>
-        <div class="menu_sel">  
+       <!-- <div class="menu_sel">  -->
         <ons-toolbar-button (click)="openMenu()">
           <ons-icon icon="fa-bars"></ons-icon>
         </ons-toolbar-button>
-        </div>
+       <!-- </div> -->
       </div>
     </ons-toolbar>
 
