--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     </ons-page>
-    <ons-dialog animation="default" cancelable id="dialog" >
+    <ons-dialog animation="default" cancelable id="dialogregdate" >
     <div class="dialog-mask"></div>
       <div class="dialog">
         <div class="dialog-container" style="height: 100%">
