--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -137,7 +137,7 @@
       
            </div>
     </ons-page>
-<ons-dialog animation="default" cancelable id="dialog" >
+<ons-dialog animation="default" cancelable id="dialogupload" >
     <div class="dialog-mask"></div>
       <div class="dialog">
         <div class="dialog-container" style="height: 100%">
