--- a/src/app/leaderrosta/leaderrosta.component.html
+++ b/src/app/leaderrosta/leaderrosta.component.html
@@ -22,7 +22,7 @@
 
         <div class="content">    
    <div class="wrapper"><h2>Leaders Attending</h2>     
-   <div id="infoi"> <ons-icon icon="fa-ellipsis-v"></ons-icon></div></div>
+   <!--<div id="infoi"> <ons-icon icon="fa-ellipsis-v"></ons-icon></div>--></div>
      <ons-card *ngIf="globals.sectiondata[4].items.length==0">No programme for the selected term</ons-card>
     <span *ngIf="date_list"> 
   <span  id="gridcontainer" *ngFor="let prog of globals.progs; index as i">
