--- a/src/app/qmcard/qmcard.component.css
+++ b/src/app/qmcard/qmcard.component.css
@@ -1,2 +1,5 @@
 .head { color: #7413dc; font-size: 16pt; font-weight: 600; margin-top: 0px;}
 .head2 { margin-top: 0px;} 
+.qmimage { margin-left: auto;
+  margin-right: auto;
+  display: block;}
