--- a/src/app/qmcard/qmcard.component.html
+++ b/src/app/qmcard/qmcard.component.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="qxf5tksolzymekf"></script>
+<!--<script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="qxf5tksolzymekf"></script>-->
 <ons-page>
 	<ons-toolbar>
 		<div class="center">
