--- a/src/app/qmcard/qmcard.component.css
+++ b/src/app/qmcard/qmcard.component.css
@@ -1,5 +1,12 @@
-.head { color: #7413dc; font-size: 16pt; font-weight: 600; margin-top: 0px;}
+.head { color: var(--scoutpurple); font-size: 16pt; font-weight: 600; margin-top: 0px;}
 .head2 { margin-top: 0px;} 
-.qmimage { margin-left: auto;
-  margin-right: auto;
-  display: block;}
+.qmimage { float: left; 
+  width: 500px; 
+  height: 500px;
+  position: relative;  
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;}
+
+  .qmgrid { display:flex; flex-wrap:wrap; justify-content: center;}
