--- a/src/app/qmcard/qmcard.component.html
+++ b/src/app/qmcard/qmcard.component.html
@@ -42,4 +42,9 @@
        
     </ons-card>      
   </div>   
-  <ons-dialog style="width:100%; height:100vh;" var="naviDialog" cancelable>
+  <ons-dialog style="width:100%; height:100%;" id="qmcarddialog" var="naviDialog" cancelable>
+    <div class="dialog-container" style="height: 1vh;">
+    <p>Close</p>
+    <iframe id="pdf_preview" style="height:80%"></iframe>
+    </div>
+  </ons-dialog>
