--- a/src/app/qmcard/qmcard.component.html
+++ b/src/app/qmcard/qmcard.component.html
@@ -42,9 +42,9 @@
        
     </ons-card>      
   </div>   
-  <ons-dialog style="width:100%; height:100%;" id="qmcarddialog" var="naviDialog" cancelable>
-    <div class="dialog-container" style="height: 90vh;">
+  <ons-dialog style="width:100%;" id="qmcarddialog" var="naviDialog" cancelable>
+    <div class="dialog-container" style="height: 90vh; width: 100%;">
     <p>Close</p>
-    <iframe id="pdf_preview" style="height:80%"></iframe>
+    <iframe id="pdf_preview" style="height:80%; width:100%;"></iframe>
     </div>
   </ons-dialog>
