--- a/src/app/birthday/birthday.component.css
+++ b/src/app/birthday/birthday.component.css
@@ -13,5 +13,5 @@
 width: 40px !important;
   height: 40px !important;
   font-size:20px;
-  background-color: #00a794 ;
+  background-color: var(--scoutteal)
 }
