--- a/src/app/eventcard/attendancetab/attendancetab.component.css
+++ b/src/app/eventcard/attendancetab/attendancetab.component.css
@@ -1,6 +1,6 @@
-.head { color: #7413dc; font-size: 16pt; font-weight: 600;}
+.head { color: var(--scoutpurple); font-size: 16pt; font-weight: 600;}
 .subhead { font-size: 10pt;}
-.list-header { background-color:  #7413dc; color: white; }  
+.list-header { background-color:  var(--scoutpurple); color: white; }  
 .sum_seg {display: none}
 .table{ border-top: solid; padding-top: 5px; display: flex; flex-wrap: wrap; border-width: 1px;}
 .table_row{ 
