--- a/src/app/eventcard/summarytab/summarytab.component.css
+++ b/src/app/eventcard/summarytab/summarytab.component.css
@@ -1,2 +1,2 @@
-.head { color: #7413dc; font-size: 16pt; font-weight: 600;}
+.head { color:var(--scoutpurple); font-size: 16pt; font-weight: 600;}
 .subhead { font-size: 10pt;}
