--- a/src/app/globalsearch/globalsearch.component.css
+++ b/src/app/globalsearch/globalsearch.component.css
@@ -13,11 +13,11 @@
 width: 40px !important;
   height: 40px !important;
   font-size:20px;
-  background-color: #7413dc;
+  background-color: var(--scoutpurple);
 }
 
 .member_outer.selected .member_inner .member_initial {
-  background-color: #7413dc;
+  background-color: var(--scoutpurple);
 }
 .member_box { 
  display: table;
@@ -61,7 +61,7 @@ width: 40px !important;
 
 .patrolheader { 
   clear:left;
-  background-color: #00a794;
+  background-color: var(--scoutteal);
   color: white;
     padding: 10px;
   }
@@ -132,7 +132,7 @@ float: left;
   position: absolute;
   margin: -5px;
   font-size: 10pt;
-  background: #7413dc;
+  background: var(--scoutpurple);
 }
 .pulse {
     animation-name: pulse_animation;
