--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,10 @@
   --scoutteal: #00a794; 
   --scoutgreen: #23a950; 
     --scoutred: #e22e12; 
-        --scoutyellow: #ffe627; 
+        --scoutyellow: #ffe627;
+        --scoutblue: #006ddf; 
+        --scoutdarkblue: #003982;
+        --scoutpink: #ffb4e5;
 }
 .qmimage { float: left; 
   padding: 10px;
