--- a/src/app/medical/medical.component.css
+++ b/src/app/medical/medical.component.css
@@ -52,7 +52,7 @@
 width: 40px !important;
   height: 40px !important;
   font-size:20px;
-  background-color: #7413dc;
+  background-color: var(--scoutpurple);
 }
-:checked+.segment__button {  background-color: yellow !important}
+:checked+.segment__button {  background-color: var(--scoutyellow) !important}
 .segmed { margin-left: 2px}
