--- a/src/app/programme/programme.component.css
+++ b/src/app/programme/programme.component.css
@@ -1,5 +1,5 @@
 .no_opt {text-align: center;  background: lighrgrey; font-weight: 600;}
-.not_style {background: #7413dc; margin-top: 25px; margin-left: -15px; font-size: small;}
+.not_style {background: var(--scoutpurple); margin-top: 25px; margin-left: -15px; font-size: small;}
 .helper2 {margin-top: -20px;
     margin-right: -20px;}
 .helper {font-size: 20pt;}
