--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -11,7 +11,7 @@
 }
 
 .member_outer.selected .member_inner .member_initial {
-  background-color: #7413dc;
+  background-color: var(--scoutpurple);
 }
 .member_box { 
  display: table;
@@ -69,7 +69,7 @@ float: left;
   position: absolute;
   margin: -5px;
   font-size: 10pt;
-  background: #7413dc;
+  background: var(--scoutpurple);
 }
 .pulse {
     animation-name: pulse_animation;
@@ -98,14 +98,14 @@ max-width: 50px;
     text-align: center;}
 .week {display: flex; max-width: 350px;background:lightgrey; color:black;}
 .week2 {display: flex; max-width: 350px; background:darkgrey; color:black;}
-.day:hover {background: #00a794; border-radius: 50%;}
+.day:hover {background: var(--scoutteal); border-radius: 50%;}
 .monthbut {width: 10%}
 .month_head {
   max-width: 350px;
   display: flex;
       height: 50px;
     line-height: 50px;
-    background: #7413dc;
+    background: var(--scoutpurple);
     color: white;
 }
 
